# QOnlineTranslatorJsonTest

./: .gitmodules  CMakeLists.txt
src/: main.cpp
